--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit
-spacy
-en-core-web-sm==3.7.1
-nltk
-scikit-learn
-python-docx
-pdfplumber
-fpdf
-langdetect
+# Do not add streamlit - Cloud provides it. Reduces dependency conflicts.
+spacy~=3.7.6
+nltk~=3.8.1
+scikit-learn~=1.4.0
+python-docx==1.1.0
+pdfplumber~=0.11.0
+fpdf2~=2.7.9
+langdetect==1.0.9
