--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Do not add streamlit - Cloud provides it. Reduces dependency conflicts.
 spacy>=3.8.7,<4
 nltk~=3.8.1
-scikit-learn~=1.4.0
+scikit-learn>=1.5.0
 python-docx==1.1.0
 pdfplumber~=0.11.0
 fpdf2~=2.7.9
